<?xml version="1.0"?>
<package>
  <name>genidl</name>
  <version>0.0.1</version>
  <description>ROS message and service to DDS IDL converter.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>idl</message_generator>
  </export>
</package>
