<?xml version="1.0"?>
<package>
  <name>genidlcpp</name>
  <version>0.0.1</version>
  <description>DDS IDL to C++ generator.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genidl</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_impl_ospl</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>rclcpp_impl_ospl</run_depend>

  <export>
    <message_generator>idlcpp</message_generator>
  </export>
</package>
