<?xml version="1.0"?>
<package>
  <name>genjsoncpp</name>
  <version>0.0.0</version>
  <description>Generates C++ code to generate JSON for ROS Msg's</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>gencpp</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>gencpp</run_depend>

  <export>
    <message_generator>jsoncpp</message_generator>
  </export>
</package>
