<?xml version="1.0"?>
<package>
  <name>rclnodejs</name>
  <version>0.0.0</version>
  <description>ROS Client Library for nodejs</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <run_depend>rclcpp</run_depend>

</package>
